--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.3",
     "@radix-ui/react-form": "^0.0.3",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-tabs": "^1.0.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
